--- a/src/pages/Questions/Questions.scss
+++ b/src/pages/Questions/Questions.scss
@@ -1,3 +1,64 @@
-.questions{
-  height: 100vh;
+.loading{
+  height: 90vh;
 }
+
+.questions__list{
+  // height: 100%;
+  padding: 3rem 2rem;
+  max-width: 1280px;
+  margin: 0 auto;
+    
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+    
+  .item{
+    // margin:10px;
+    color: #293264;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    border-bottom: #DBDEF0 1px solid;
+    padding-bottom: 1rem;
+    
+    h2{
+      font-size: 1em;
+      font-weight: 600;
+      
+    }
+  }
+
+  .questions__list-results{
+    display: flex;
+    align-items: center;
+
+    .check-answers{
+      background-color: #4D5B9E;
+      padding: .5rem 1.8rem;
+      font-weight: 600;
+      font-family: inherit;
+      border-radius: 5px;
+      width: 250px;
+      border: 0;
+      color: white;
+      font-size: 1.15em;
+      margin: 1rem auto;
+      cursor: pointer;
+      
+
+  }
+
+  }
+
+  @media screen and (min-width:620px) {
+    padding: 4rem 4rem;
+    // font-size: 18px;
+    
+  }
+
+
+}
+
+
+
+
