--- a/src/pages/Questions/Questions.scss
+++ b/src/pages/Questions/Questions.scss
@@ -7,10 +7,10 @@
   padding: 3rem 2rem;
   max-width: 1280px;
   margin: 0 auto;
-    
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 1.5em;
+  font-size: 19px;
     
   .item{
     // margin:10px;
@@ -32,7 +32,7 @@
     display: flex;
     align-items: center;
 
-    .check-answers{
+    .main-button{
       background-color: #4D5B9E;
       padding: .5rem 1.8rem;
       font-weight: 600;
@@ -44,14 +44,12 @@
       font-size: 1.15em;
       margin: 1rem auto;
       cursor: pointer;
-      
+    }
 
   }
 
-  }
-
-  @media screen and (min-width:620px) {
-    padding: 4rem 4rem;
+  @media screen and (min-width:720px) {
+    padding: 1rem 4rem;
     // font-size: 18px;
     
   }
