--- a/src/pages/Questions/Questions.scss
+++ b/src/pages/Questions/Questions.scss
@@ -3,30 +3,65 @@
 }
 
 .questions__list{
-  // height: 100%;
+  // height: 100vh;
   padding: 3rem 2rem;
   max-width: 1280px;
   margin: 0 auto;
     
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 2.5em;
     
   .item{
     // margin:10px;
     color: #293264;
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 1.5em;
     border-bottom: #DBDEF0 1px solid;
-    padding-bottom: 1rem;
+    padding-bottom: 1.8rem;
+    
     
     h2{
       font-size: 1em;
       font-weight: 600;
       
     }
+
+    .options{    
+      display: flex;
+      flex-direction: row;
+      gap: 1em;
+      flex-wrap: wrap;
+
+      label{
+        display: inline-block;
+        padding: .35rem 2.15rem;
+        border: #293264 1px solid;
+        border-radius: 5px;
+        background-color: transparent;
+        cursor: pointer;
+      }
+
+      input[type="radio"]{
+        display: none;
+      
+        &:checked + label{
+            background-color: #D6DBF5;
+            cursor: pointer;
+        }
+      }
+    }
+
+    @media screen and (min-width: 720px) {
+      font-size: 19px;
+    }
+    
   }
+
+
+  
+  
 
   .questions__list-results{
     display: flex;
@@ -53,9 +88,13 @@
   @media screen and (min-width:620px) {
     padding: 4rem 4rem;
     // font-size: 18px;
-    
   }
 
+  @media screen and (min-width:1020px) {
+    padding: 4rem 4rem;
+    // font-size: 18px;
+    height: 100% auto;
+  }
 
 }
 
