--- a/src/pages/Questions/Questions.scss
+++ b/src/pages/Questions/Questions.scss
@@ -4,6 +4,7 @@
 
 .questions__list{
   // height: 100vh;
+  // background-color: red;
   padding: 3rem 2rem;
   max-width: 1280px;
   margin: 0 auto;
@@ -20,7 +21,6 @@
     gap: 1.5em;
     border-bottom: #DBDEF0 1px solid;
     padding-bottom: 1.8rem;
-    
     
     h2{
       font-size: 1em;
