--- a/src/components/Option/Option.scss
+++ b/src/components/Option/Option.scss
@@ -1,3 +1,11 @@
+button{
+  padding: .35rem 2.15rem;
+  border: #293264 1px solid;
+  border-radius: 5px;
+  // background-color: transparent;
+  cursor: pointer;
+}
+
 .transparent{
   background-color: transparent;
 }
